[package]
name = "ycsb"
version = "0.0.0"
authors = ["Pekka Enberg <penberg@chiselstrike.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
rand = {version = "0.8", features = ["small_rng"]}
serde = { version = "1.0.130", features = ["derive"] }
sql-builder = "3.1.1"
sqlite = "0.26.0"
structopt = "0.3.23"
toml = "0.5.8"
rocksdb = "0.21.0"
tokio-postgres = "0.7.8"
tokio = { version = "1.29.1", features = ["full"] }
async-trait = "0.1.71"

[profile.release]
debug = true
